# sancho_ws

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
Log/: OrbbecSDK.log.txt
groot2_project/: sancho_bt.btproj
log/: latest_list
nginx/: rosbridge_proxy.conf
ros-web-client/: index.html  package-lock.json  package.json
ros-web-client/src/: App.jsx
ros-web-client/src/components/: CommandButton.jsx  MapViewer.jsx  MapViewer2D.jsx  NavGoalForm.jsx  RosConnection.jsx
ros-web-client/src/pages/: ControlPage.jsx  MainPage.jsx  MapPage.jsx  SettingsPage.jsx  TelemetryPage.jsx
ros-web-client/src/ros/: RosContext.jsx
scripts/: generate_certs.sh  restart_can_errors.py  start_nginx.sh  stop_nginx.sh
src/OrbbecSDK_ROS2/: .gitignore
src/astra_camera/launch/: astra.launch.xml
src/interbotix_ptu/interbotix_ros_turrets/interbotix_ros_xsturrets/interbotix_xsturret_control/: CMakeLists.txt  package.xml
src/interbotix_ptu/interbotix_ros_turrets/interbotix_ros_xsturrets/interbotix_xsturret_control/config/: wxxms.yaml
src/interbotix_ptu/interbotix_ros_turrets/interbotix_ros_xsturrets/interbotix_xsturret_control/launch/: xsturret_control copy.py  xsturret_control.py  xsturret_control.xml  xsturret_control_javi.py  xsturret_control_launch.py
src/interbotix_ptu/interbotix_ros_xsturrets/interbotix_xsturret_descriptions/: CMakeLists.txt  package.xml
src/laser_scan_merger/: CMakeLists.txt
src/laser_scan_merger/launch/: merge_2_scan.launch.py  visualize_merge_2_scan.launch.py
src/nav2_social_costmap_plugin/src/: social_layer.cpp
src/proxemics_costmap_layer/: CMakeLists.txt  package.xml  proxemics_costmap_layer_plugin.xml
src/proxemics_costmap_layer/src/: proxemics_layer.cpp
src/sancho_audio/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_audio/launch/: audio_player.launch.py
src/sancho_audio/sancho_audio/: audio_direction.py  audio_direction_node.py  audio_filter_node.py  audio_player_node.py  gcc_phat_node.py  microphone_capturer_node.py  microphone_publisher.py  speaker_controller.py  stereo_recorder_node.py  test.py  test_microfono_parametros.py  vad_node.py
src/sancho_audio/sancho_audio/tdoa_nodes/: __init__.py  tdoa_gcc.py  tdoa_ncc.py
src/sancho_audio/sancho_interaction_audio/: microphone_capturer_node.py  stereo_recorder_node.py  vad_node.py
src/sancho_bringup/: package.xml  requirements.txt  setup.py
src/sancho_bringup/config/: camera_info_high.yaml  nav2_params_ranger.yaml  params_high.yaml  params_mid.yaml  params_serial.yaml  scan_merger.yaml  usb_cam_params.yaml
src/sancho_bringup/launch/: sancho_bringup.launch.py
src/sancho_demo/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_demo/launch/: head.launch.py
src/sancho_demo/sancho_demo/: head_demo.py
src/sancho_description/: package.xml  setup.cfg  setup.py
src/sancho_description/launch/: display.launch.py
src/sancho_description/sancho_description/: joint_state_merger_node.py
src/sancho_description/urdf/: sancho_ranger.urdf
src/sancho_head_control/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_head_control/launch/: sancho_head_launch.py
src/sancho_head_control/sancho_head_control/: head_controller_node.py  head_tracker_node.py
src/sancho_interaction/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_interaction/launch/: head.launch.py  sancho_interaction_manager.launch.py
src/sancho_interaction/pkg_old/: setup.py
src/sancho_interaction/py_human_face_recognition/: package.xml  setup.py
src/sancho_interaction/sancho_interaction/: interaction_manager_node.py
src/sancho_interaction/sancho_interaction_manager/: setup.py
src/sancho_interaction_audio/: setup.cfg  setup.py
src/sancho_interaction_audio/launch/: audio_player.launch.py
src/sancho_interaction_audio/sancho_interaction_audio/: audio_direction_node.py  audio_player_node.py
src/sancho_interaction_manager/: package.xml  setup.cfg  setup.py
src/sancho_interaction_manager/launch/: sancho_interaction_manager.launch.py
src/sancho_interaction_manager/sancho_interaction_manager/: interaction_manager_node.py  v2.py
src/sancho_lifecycle_utils/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_lifecycle_utils/sancho_lifecycle_utils/: node_configurator.py
src/sancho_msgs/: CMakeLists.txt  package.xml
src/sancho_msgs/action/: PlayAudio.action
src/sancho_msgs/msg/: AudioData.msg  BoolStamped.msg  DetectedObject.msg  Face.msg  FaceArray.msg  GroupInfo.msg  PersonPose.msg  PersonsPoses.msg  VADSegment.msg
src/sancho_msgs/srv/: GetNoiseFloor.srv  SetHome.srv
src/sancho_navigation/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_navigation/bt/: navigate_to_pose_custom.xml  testBT.xml
src/sancho_navigation/config/: depthimage_to_laserscan_params.yaml  nav2_params_ranger.yaml  (+2 more)
src/sancho_orchestrator/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_perception/: package.xml  requirements.txt  setup.py
src/sancho_perception/launch/: full_perception_launch.py  group_detector_launch.py  people_skeleton_detector_launch.py  skeleton_nodes_launch.py
src/sancho_perception/sancho_perception/: group_detection_navigator_node.py  group_detection_node.py  group_navigation_node.py  group_navigator_node.py  group_waypoint_generator_node.py  metrics_node.py  movenet_inference_node copy.py  movenet_inference_node.py  movenet_postprocessing_node.py  movenet_utils.py  perception_test.py  person_detector_node.py  person_pose_extractor_node.py  person_pose_publisher_node.py  roup_detection_navigator_node.py  skeleton_3d_node.py  skeleton_detector.py  test.py
src/sancho_perception/sancho_perception/LEGACY/: navigate_to_detection_node.py  person_pose_publisher_node.py  skeleton_detector.py  test.py
src/sancho_vision/: package.xml  requirements.txt  setup.cfg  setup.py
src/sancho_web/: package.xml  requirements.txt  setup.py
src/social_bt_nodes/: CMakeLists.txt  package.xml  social_bt_nodes_plugins.xml
src/social_bt_nodes/src/: is_human_blocking_condition.cpp
(+134 files in other folders)
