<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sancho_audio</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="antoniocanetebaena1234@gmail.com">mapir</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sancho_msgs</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>
  <depend>pyaudio</depend>
  <depend>playsound</depend>
  <depend>soundfile</depend>
  <depend>pyannote.audio</depend>
  <depend>scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
