<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sancho_perception</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="antoniocanetebaena1234@gmail.com">mapir</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>numpy</depend>
  <depend>opencv-python</depend>
  <depend>tensorflow</depend>
  <depend>tensorflow_hub</depend>
  <depend>scikit-learn</depend>
  <depend>tf_transformations</depend>
  <depend>message_filters</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
