<?xml version="1.0"?>
<package format="3">
  <name>interbotix_xsturret_control</name>
  <version>0.0.0</version>
  <description>The interbotix_xsturret_control package</description>
  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_xsturret_control</url> -->
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>

  <build_depend>interbotix_xs_sdk</build_depend>
  <build_depend>interbotix_xs_modules</build_depend>
  <build_depend>interbotix_xsturret_descriptions</build_depend>
  <build_export_depend>interbotix_xs_sdk</build_export_depend>
  <build_export_depend>interbotix_xs_modules</build_export_depend>
  <build_export_depend>interbotix_xsturret_descriptions</build_export_depend>
  <exec_depend>interbotix_xs_sdk</exec_depend>
  <exec_depend>interbotix_xs_modules</exec_depend>
  <exec_depend>interbotix_xsturret_descriptions</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
